fix console.log warning & home page layout issue

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,7 +1,6 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  gap: 8vh;
   flex-wrap: wrap;
   width: 100%;
 }
